--- a/integrante3/trabajo3.html
+++ b/integrante3/trabajo3.html
@@ -48,23 +48,22 @@
 
   <div class="trabajo">
     <h2>Trabajo 1: CUENTO </h2>
-    <a href="/pdf/Mi Cuento.pdf" target="_blank">Ver PDF</a><br>
-    <img src="trabajos/imagen1.jpg" alt="Imagen del Trabajo 1">
+    <a href="../pdf/Mi Cuento.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 2: TALLER TIPOS DE COMUNICACION</h2>
-    <a href="/pdf/taller4.pdf" target="_blank">Ver PDF</a><br>
+    <a href="../pdf/taller4.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 3: DIAPOSITIVAS FUNCIONES DEL LENGUAJE </h2>
-    <a href="/pdf/siir2.pdf" target="_blank">Ver PDF</a><br>
+    <a href="../pdf/siir2.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 4: INVESTIGACIÓN CCIÓN ASERTIVA </h2>
-    <a href="/pdf/color.pdf" target="_blank">Ver PDF</a><br>
+    <a href="../pdf/color.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
 </body>
