--- a/integrante1/trabajo1.html
+++ b/integrante1/trabajo1.html
@@ -48,23 +48,23 @@
 
   <div class="trabajo">
     <h2>Trabajo 1: CUENTO </h2>
-    <a href="../pdf/WhatsApp Image 2025-04-09 at 8.45.52 PM.jpeg" target="_blank">Ver PDF</a><br>
+    <a href="pdf/WhatsApp Image 2025-04-09 at 8.45.52 PM.jpeg" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 2: TALLER TIPOS DE COMUNICACION</h2>
     <a href="" target="_blank">Ver PDF</a><br>
-    <img src="../pdf/comunicacion mariana.pdf" alt="Imagen del Trabajo 2">
+    <img src="pdf/comunicacion mariana.pdf" alt="Imagen del Trabajo 2">
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 3: DIAPOSITIVAS FUNCIONES DEL LENGUAJE </h2>
-    <a href="../pdf/funcion de lenguaje poetico.pdf" target="_blank">Ver PDF</a><br>
+    <a href="pdf/funcion de lenguaje poetico.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 4: INVESTIGACIÓN CCIÓN ASERTIVA </h2>
-    <a href="../pdf/COMUNICACIONES mariana 4.pdf" target="_blank">Ver PDF</a><br>
+    <a href="pdf/COMUNICACIONES mariana 4.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
 </body>
