--- a/integrante2/trabajo2.html
+++ b/integrante2/trabajo2.html
@@ -48,22 +48,22 @@
 
   <div class="trabajo">
     <h2>Trabajo 1: CUENTO </h2>
-    <img src="pdf/dairon1.jpeg" alt="Imagen del Trabajo 1">
+    <img src="/pdf/dairon1.jpeg" alt="Imagen del Trabajo 1">
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 2: TALLER TIPOS DE COMUNICACION</h2>
-    <a href="pdf/tipos de comunicacion Dairo .pdf" target="_blank">Ver PDF</a><br>
+    <a href="/pdf/tipos de comunicacion Dairo .pdf" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 3: DIAPOSITIVAS FUNCIONES DEL LENGUAJE </h2>
-    <a href="pdf/dairon2.pdf" target="_blank">Ver PDF</a><br>
+    <a href="/pdf/dairon2.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 4: INVESTIGACIÓN CCIÓN ASERTIVA </h2>
-    <a href="pdf/dairon3.pdf" target="_blank">Ver PDF</a><br>
+    <a href="/pdf/dairon3.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
 </body>
