--- a/integrante4/trabajo4.html
+++ b/integrante4/trabajo4.html
@@ -49,22 +49,22 @@
 
   <div class="trabajo">
     <h2>Trabajo 1: CUENTO </h2>
-    <a href="pdf/shirley cuento.pdf"arget="_blank">Ver PDF</a><br>
+    <a href="/pdf/shirley cuento.pdf"arget="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 2: TALLER TIPOS DE COMUNICACION</h2>
-    <a href="pdf/siir4.pdf" target="_blank">Ver PDF</a><br>
+    <a href="/pdf/siir4.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 3: DIAPOSITIVAS FUNCIONES DEL LENGUAJE </h2>
-    <a href="pdf/comunicacion.pdf" PDF</a><br>
+    <a href="/pdf/comunicacion.pdf" PDF</a><br>
   </div>
 
   <div class="trabajo">
     <h2>Trabajo 4: INVESTIGACIÓN CCIÓN ASERTIVA </h2>
-    <a href="pdf/color.pdf" target="_blank">Ver PDF</a><br>
+    <a href="/pdf/color.pdf" target="_blank">Ver PDF</a><br>
   </div>
 
 </body>
